# hey5_description

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
gazebo/: gazebo.urdf.xacro
meshes/: finger_abd.stl  finger_abd_collision.stl  finger_flex.stl  finger_flex_collision.stl  finger_flex_short_collision.stl  finger_flex_tip.stl  finger_flex_tip_collision.stl  palm.stl  palm_collision.stl  thumb_abd.stl  thumb_abd_collision.stl
robots/: hey5_test.urdf.xacro
urdf/: actuators.urdf.xacro  deg_to_rad.urdf.xacro  fingers.urdf.xacro  hey5.ros2_control.xacro  hey5.transmission.xacro  hey5_hand.urdf.xacro  materials.urdf.xacro  palm.urdf.xacro  transmissions.urdf.xacro
